query sent to server and yelp

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -48,20 +48,20 @@
         <!-- PRICE -->
         <div id='price'>
           <p>
-            <input type="checkbox" id="$" />
-            <label for="$">$</label>
+            <input type="checkbox" id="1" />
+            <label for="1">$</label>
           </p>
           <p>
-            <input type="checkbox" id="$$" />
-            <label for="$$">$$</label>
+            <input type="checkbox" id="2" />
+            <label for="2">$$</label>
           </p>
           <p>
-            <input type="checkbox" id="$$$" />
-            <label for="$$$">$$$</label>
+            <input type="checkbox" id="3" />
+            <label for="3">$$$</label>
           </p>
           <p>
-            <input type="checkbox" id="$$$$" />
-            <label for="$$$$">$$$$</label>
+            <input type="checkbox" id="4" />
+            <label for="4">$$$$</label>
           </p>
         </div>
 
