--- a/webapp/index.html
+++ b/webapp/index.html
@@ -71,7 +71,7 @@
         <div class="switch">
           <label>
             
-            <input type="checkbox">
+            <input id="walk" type="checkbox">
             <span class="lever"></span>
             Within walking distance
           </label>
