--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,7 +14,7 @@
   <body>
 
   <!-- NAVBAR -->
-  <nav class="white" role="navigation">
+  <!-- <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">Pulp</a>
       <ul class="right hide-on-med-and-down">
@@ -29,7 +29,7 @@
     </div>
   </nav>
 
-  <!-- MAIN -->
+  <!- MAIN -->
   <div class="container">
     <div class="row">
       
@@ -96,10 +96,15 @@
     </div>
   </div>
 
+  <div id="root">
+    <app></app>
+  </div>
+
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
+  <script src="https://unpkg.com/vue@2.3.4"></script>
   <script src="js/init.js"></script>
 
   </body>
